Validated html and css

--- a/WP_Project/client.html
+++ b/WP_Project/client.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="d3-force.v1.min.js"></script>
     <title>Twidder!</title>
 
-    <!-- -------------------------------------------- WELCOME VIEW -------------------------------------------- -->
+    <!-- - - - - - - - - - - - - - - - -  WELCOME VIEW - - - - - - - - - - - - - - - - -->
 
     <script type="text/html" id="welcome_view">
         <div class="welcome_view_content">
@@ -61,7 +61,7 @@
         </div>
     </script>
 
-    <!-- -------------------------------------------- PROFILE VIEW -------------------------------------------- -->
+    <!-- - - - - - - - - - - - - - - - - PROFILE VIEW - - - - - - - - - - - - - - - - -->
 
     <!-- <script type="text/view" id="profile_view"> -->
     <script type="text/html" id="profile_view">
