Rearranged lab 4 (project) folder layout

--- a/WP_Project/twidder/static/client.html
+++ b/WP_Project/twidder/static/client.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link href="/client.css" type="text/css" rel="stylesheet">
     <script src="/client.js" type="text/javascript"></script>
-    <script type="text/javascript" src="d3.min.js"></script>
-    <script type="text/javascript" src="d3-force.v1.min.js"></script>
+    <script type="text/javascript" src="../d3.min.js"></script>
+    <script type="text/javascript" src="../d3-force.v1.min.js"></script>
     <title>Twidder!</title>
 
     <!-- - - - - - - - - - - - - - - - -  WELCOME VIEW - - - - - - - - - - - - - - - - -->
