--- a/WP_Project/_old/d3_test.html
+++ b/WP_Project/_old/d3_test.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script type="text/javascript" src="../d3.min.js"></script>
-        <script type="text/javascript" src="../d3-force.v1.min.js"></script>
+        <script type="text/javascript" src="../twidder/static/d3.min.js"></script>
+        <script type="text/javascript" src="../twidder/static/d3-force.v1.min.js"></script>
     </head>
     <body>
         <p>Social graph</p>
